Mostrar eventos cadastrados e botão de excluir no painel admin

--- a/public/admin.html
+++ b/public/admin.html
@@ -40,6 +40,8 @@
     </button>
   </form>
 
+
+  <h3 style="text-align: center; margin-top: 30px;">Eventos adicionados</h3>
   <div class="banners-container">
     <!-- Aqui aparecem os banners via JS -->
   </div>
@@ -49,21 +51,30 @@
     fetch('/banners.json')
       .then(res => res.json())
       .then(data => {
-        const ul = document.getElementById('lista-banners');
+        const container = document.querySelector('.banners-container');
         data.forEach(b => {
-          const li = document.createElement('li');
-          li.innerHTML = `<img src="${b.url}" width="100"><form action="/delete" method="POST" style="display:inline;"><input type="hidden" name="url" value="${b.url}"><button type="submit">Excluir</button></form>`;
-          ul.appendChild(li);
-        });
+        const div = document.createElement('div');
+        div.innerHTML = `
+         <img src="${b.url}" width="100%">
+         <h4>${b.titulo}</h4>
+         <p><strong>Data:</strong> ${b.data}</p>
+          <p>${b.descricao}</p>
+         <form action="/delete" method="POST">
+        <input type="hidden" name="url" value="${b.url}">
+    <button type="submit" class="btn-excluir">Excluir</button>
+  </form>
+        `;
+        container.appendChild(div);
       });
-  </script>
+    });
+</script>
 
-  <script>
-  function logout() {
-    fetch('/logout', { method: 'POST' })
-      .then(() => window.location.href = 'logout.html');
-  }
-  </script>
+<script>
+function logout() {
+  fetch('/logout', { method: 'POST' })
+    .then(() => window.location.href = 'logout.html');
+}
+</script>
 
 </body>
 </html>
