--- a/public/admin.html
+++ b/public/admin.html
@@ -55,7 +55,7 @@
         data.forEach(b => {
         const div = document.createElement('div');
         div.innerHTML = `
-         <img src="${b.url}" width="100%">
+         <img src="${b.url}" class="admin-banner">
          <h4>${b.titulo}</h4>
          <p><strong>Data:</strong> ${b.data}</p>
           <p>${b.descricao}</p>
