--- a/public/admin-sarças.html
+++ b/public/admin-sarças.html
@@ -1,19 +1,19 @@
 
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="admin.css">
+  <link rel="stylesheet" href="admin-sarças.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link rel="icon" href="logo_rocha.png">
-<head><title>Painel Admin</title></head>
+<head><title>Painel Admin - Sarças</title></head>
 <body>
   <button class="logout-btn" onclick="logout()">Sair</button>
   <div class="logo-container">
     <img src="logo_rocha.png" alt="Logo Rocha Church" />
   </div>
 
-  <h2>Adicionar Novo Evento</h2>
+  <h2>Adicionar Novo Evento Sarças</h2>
 
-  <form class="form-container" action="/upload" method="POST" enctype="multipart/form-data">
+  <form class="form-container" action="/upload-sarcas" method="POST" enctype="multipart/form-data">
 
     <div class="input-group">
       <i class="fas fa-heading"></i>
@@ -48,7 +48,7 @@
 </body>
 
   <script>
-    fetch('/banners.json')
+    fetch('/banners-sarcas.json')
       .then(res => res.json())
       .then(data => {
         const container = document.querySelector('.banners-container');
