Corrigir path do banners arrumando

--- a/public/admin-sarcas.html
+++ b/public/admin-sarcas.html
@@ -13,7 +13,7 @@
 
   <h2>Adicionar Novo Evento Sarças</h2>
 
-  <form class="form-container" action="/upload-sarcas" method="POST" enctype="multipart/form-data">
+  <form class="form-container" action="/upload" method="POST" enctype="multipart/form-data">
 
     <div class="input-group">
       <i class="fas fa-heading"></i>
